# xnp2

./: .gitignore  calendar.c  common.h  debugsub.c  debugsub386.c  keystat.c  keystat.h  keystat.tbl  nevent.c  nevent.h  np2ver.h  pccore.c  pccore.h  readme.txt  statsave.c  statsave.h  statsave.tbl  timing.c  update.txt
accessories/: bin2txt.dsp  bin2txt.dsw  lzxpack.dsp  lzxpack.dsw
bios/: bios.c  bios.h  bios0c.c  bios12.c  bios13.c  bios18.c  bios1b.c  bios1c.c  bios1f.c  biosmem.h  sxsibios.c  sxsibios.h
cbus/: amd98.c  atapicmd.c  board118.c  board14.c  board26k.c  board86.c  boardpx.c  boardso.c  boardspb.c  boardx2.c  ideio.c  ideio.h  mpu98ii.c  pc9861k.c  pcm86io.c  sasiio.c  scsicmd.c  scsiio.c
codecnv/: codecnv.h  eucsjis.c  eucucs2.c  sjiseuc.c  sjisucs2.c  ucs2utf8.c  utf8ucs2.c
common/: _memory.c  _memory.h  arcunzip.c  lstarray.c  milstr.c  milstr.h  profile.c  rect.c  rect.h  strres.c  strres.h  textfile.c  wavefile.c
embed/: vramhdl.c  vramhdl.h  vrammix.c  vrammix.h
fdd/: diskdrv.c  diskdrv.h  fdd_d88.c  fdd_d88.h  fdd_mtr.c  fdd_xdf.c  fdd_xdf.h  fddfile.c  fddfile.h  newdisk.c  newdisk.h  sxsi.c  sxsi.h  sxsicd.c  sxsicd.h  sxsihdd.c  sxsihdd.h
font/: font.c  font.h
generic/: cmjasts.c  cmndraw.c  cmndraw.h  cmver.c  dipswbmp.c  hostdrv.c  hostdrv.h  hostdrvs.c  hostdrvs.h  keydisp.c  keydisp.res  memdbg32.c  np2info.c  softkbd.c  softkbd.h  unasmstr.tbl
i286a/: cpucore.h  i286a.c  i286a.inc  i286a_0f.s  i286a_8x.s  i286a_ea.s  i286a_f6.s  i286a_fe.s  i286a_i.s  i286a_mn.s  i286a_rp.s  i286a_sf.s  i286aalu.inc  i286aea.inc  i286aio.inc  i286amem.inc  i286aop.inc  i286asft.inc  memory.c  memory.h  memorya.s  memoryd.s  readme.txt
i286c/: cpucore.h  i286c.c  i286c.h  i286c.mcr  i286c_0f.c  i286c_ea.c  i286c_f6.c  i286c_fe.c  i286c_mn.c  i286c_rp.c  memory.c  memory.h  v30patch.c
i286x/: cpucore.h  i286x.cpp  i286xs.cpp  memory.h  memory.x86  v30patch.cpp
i386c/: cpucore.c  cpucore.h  memory.c  memory.h
io/: cgrom.c  cgrom.h  crtc.c  dmac.c  dmac.h  fdc.c  gdc.c  gdc_sub.c  iocore.c  mouseif.c  np2sysp.c  pic.c  pit.c  serial.c  upd4990.c
lio/: gput1.c  gscreen.c  lio.c  lio.h
macos9/: commng.cpp  compiler.h  dosio.cpp  dosio.h  fontmng.cpp  fontmng.h  ini.cpp  ini.h  mackbd.cpp  mackbd.h  macossub.cpp  macossub.h  menu.cpp  menu.h  mkres.lzh  mousemng.cpp  mousemng.h  nekop2.res  np2.cpp  np2.h  np2.proj  np2.r  np21.proj  np21.r  np21classic.proj  np21pf.h  np21spf.h  np2classic.proj  np2open.cpp  np2open.h  readme.txt  resource.h  scrnmng.cpp  scrnmng.h  soundmng.cpp  soundmng.h  sysmng.cpp  sysmng.h  taskmng.cpp  trace.cpp
macosx/: carbon.r  cmmidi.cpp  cmmidi.h  commng.cpp  commng.h  compiler.h  dosio.cpp  dosio.h  fdefine.cpp  fdefine.h  fontmng.cpp  hid.cpp  hid.h  ini.cpp  ini.h  joymng.cpp  joymng.h  mackbd.cpp  mackbd.h  macossub.cpp  macossub.h  menu.cpp  menu.h  mousemng.cpp  mousemng.h  np2.cpp  np2.h  np2.proj  np2.r  np2cw.h  np2gcc.h  np2gcc_ia32.h  np2opening.cpp  np2opening.h  resource.h  scrnmng.cpp  scrnmng.h  soundmng.cpp  soundmng.h  soundrecording.cpp  (+14 more)
mem/: memtram.c  memvga.h
mona/: commng.c  dosio.c  dosio.h  fontmng.c  fontmng.h  ini.c  inputmng.c  mona.dsp  mona.dsw  mousemng.c  mousemng.h  np2.c  np2.h  scrnmng.c  scrnmng.h  sdlkbd.c  soundmng.c  soundmng.h  sysmenu.c  sysmenu.str  taskmng.c  timemng.c  timemng.h  trace.c
np2tool/: POWEROFF.COM
sdl/: commng.h  dosio.c  dosio.h  fontmng.c  fontmng.h  ini.c  joymng.c  joymng.h  makefile.win  makefile.zau  mousemng.c  mousemng.h  np2.c  np2.h  oemtext.h  readme.txt  scrnmng.c  scrnmng.h  sdlkbd.c  sdlw32s.dsp  sdlw32s.dsw  soundmng.c  soundmng.h  sysmenu.c  sysmenu.h  sysmenu.res  sysmenu.str  taskmng.c  (+2 more)
x11/: INSTALL.ja  Imakefile  Makefile.am  README.ja  autogen.sh  cmmidi.c  cmmidi.h  cmpara.h  cmserial.c  cmserial.h  commng.c  commng.h  compiler.h  config.tmpl  configure.ac  dosio.c  dosio.h  drawmng.c  drawmng.h  fontmng.h  ini.c  ini.h  inputmng.c  inputmng.h  joymng.c  joymng.h  kbdmng.c  kbdmng.h  kdispwin.c  kdispwin.h  main.c  mousemng.h  np2.c  np2.h  oemtext.h  scrnmng.h  skbdwin.c  skbdwin.h  soundmng.c  soundmng.h  (+19 more)
x11/debug/: debugwin.h  viewer.h  viewmem.c  viewmem.h
x11/ext/: opna.cpp
x11/gtk2/: dialog_about.c  dialog_calendar.c  dialog_config.c  dialog_midi.c  dialog_newdisk.c  dialog_screen.c  dialog_sound.c  gtk_drawmng.c  gtk_drawmng.h  gtk_font.c  gtk_keyboard.c  gtk_keyboard.h  gtk_main.c  gtk_menu.c  gtk_menu.h  gtk_mouse.c  gtk_screen.c  gtk_toolkit.h  gtk_wrapper.c  window_keydisp.c  window_softkbd.c  xnp2.h
x11/gtk4/: dialog_about.c  dialog_about.h  dialog_about.ui  dialog_calendar.c  dialog_config.c  dialog_midi.c  dialog_newdisk.c  dialog_screen.c  dialog_sound.c  gtk_drawmng.c  gtk_drawmng.h  gtk_font.c  gtk_keyboard.c  gtk_keyboard.h  gtk_main.c  gtk_mouse.c  gtk_screen.c  gtk_toolkit.h  main.ui  menu.ui  window_keydisp.c  window_softkbd.c  xnp2.gresource.xml  xnp2.h  xnp2.ui
x11/po/: ChangeLog  Makevars  POTFILES.in  ja.po
x11/resources/: np2.desktop  np21.desktop
x11/sdl/: Makefile  sdl_font.c  sdl_keyboard.c  sdl_keyboard.h  sdl_main.c  sdl_mouse.c  sdl_screen.c  sdl_toolkit.h  xnp2.h
(+514 files in other folders)
